fix style for showcases strip on small screens

--- a/app/components/showcases/showcases.styl
+++ b/app/components/showcases/showcases.styl
@@ -75,7 +75,7 @@
     max-height 50rem !important
     .main-box
       .sub-box
-        width 50%
+        width 42%
         padding-top 2%
         -moz-padding-start 5%
         -webkit-padding-start 5%
@@ -89,32 +89,19 @@
         text-align center
       .desc
         text-align center
-  .img-container
-    .icon-2, .icon-4
-      display none
-    .icon-3
-      top 14rem !important
-    .rtl-icon-3
-      right 9rem !important
-      top 13rem !important
-    .ltr-icon-3
-      left 2rem !important
 
 @media screen and (min-width 768px) and (max-width 1023px)
   #showcases
     height 100vh !important
-    max-height 35rem !important
+    max-height 44rem !important
     .main-box
       .sub-box
-        width 55%
-        min-width 480px
+        width 45%
+        min-width 440px
         padding-top 2%
         -moz-padding-start 5%
         -webkit-padding-start 5%
         padding-inline-start 5%
-        -moz-padding-end 2%
-        -webkit-padding-end 2%
-        padding-inline-end 2%
         h2
           font-size 2.75rem
         p
@@ -124,16 +111,6 @@
         text-align center
       .desc
         text-align center
-  .img-container
-    .icon-1, .icon-2, .icon-4
-      display none
-    .icon-3
-      top 0rem !important
-    .rtl-icon-3
-      right 0rem !important
-      top 0rem !important
-    .ltr-icon-3
-      left 0rem !important
 
 @media screen and (min-width 320px) and (max-width 767px)
   #showcases
